projects/api-go/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: api-go
  name: api-go
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-go
  type: ClusterIP
