projects/api-go/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-go
  namespace: default
spec:
  rules:
  - host: api-go.tozzi.fan
    http:
      paths:
      - backend:
          serviceName: api-go
          servicePort: 8080
